# another-cpp-project-cpp26

./: CMakeLists.txt  anothermain.cpp  main.cpp  supermain.cpp
cppheader/: 0.cpp  0.hpp  1.cpp  1.hpp  2.cpp  2.hpp  CMakeLists.txt
