cmake_minimum_required(VERSION 3.31)
project(anothersomething)

set(CMAKE_CXX_STANDARD 26)
add_subdirectory(cppheader)
add_executable(main_exec main.cpp)
add_executable(no_main_exec anothermain.cpp)
add_executable(super_main supermain.cpp)
target_link_libraries(main_exec PRIVATE somethingc++)
target_link_libraries(main_exec PRIVATE randomc++)
target_link_libraries(no_main_exec PRIVATE thiscancrashc++)
target_link_libraries(no_main_exec PRIVATE randomc++)
target_link_libraries(super_main PRIVATE randomc++)